--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,8 @@
         <title></title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" href="Images/logo.png" type="image/x-icon">
+
     </head>
     <body>
         <div class="header-bar">
