--- a/products.html
+++ b/products.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+	<link rel="icon" href="Images/logo.png" type="image/x-icon">
+
     </head>
     <body>
             <div class="header-bar">
