--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
             <h2 style="text-align: center;">Cart is empty for now, keep shopping to add items:)</h2>
         </div>
         <div class="footer-bar">
-            <h3>Sign up to our mail list for more fresh news:)</h3>
+            <h3>Sign up to our mailing list for more offers and pre-sale deals:)</h3>
         </div>
     </body>
 </html>
